# seed-vc

./: CLAUDE.md  app_svc.py  main.py  pyproject.toml
docs/: JAPANESE_SVC_OPTIMIZATION.md  RESEARCH.md  SVC_SOTA_RESEARCH.md
tests/: test_finetuning.py
