[project]
name = "seed-vc"
version = "0.1.0"
description = "Zero-shot voice conversion and singing voice conversion"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "descript-audio-codec>=1.0.0",
    "einops>=0.8.1",
    "freesimplegui>=5.2.0.post1",
    "funasr>=1.2.9",
    "gradio>=6.2.0",
    "huggingface-hub>=0.28.1",
    "hydra-core>=1.3.2",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "modelscope>=1.33.0",
    "munch>=4.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
